# ComputerVisionImp

./: .gitignore  CMakeLists.txt  README.md
01_Intro/: CMakeLists.txt  DisplayImage.cpp
02_Canny/: CMakeLists.txt  CannyEdgeDetec.cpp
03_Hough_Circle/: CMakeLists.txt  main.cpp
04_Motion_Detec/: CMakeLists.txt
04_Motion_Detec/include/: Paint.hpp  tracked_obj.hpp  trackedobjectmonitor.hpp  tracking.hpp
04_Motion_Detec/src/: main.cpp  tracked_obj.cpp  tracking.cpp
04_Motion_Detec/src/objectdetection/: trackedobject.cpp
04_Motion_Detec/src/util/: Calculation.cpp  PreProcImage.cpp
05_Motion_Tracking/: CMakeLists.txt
05_Motion_Tracking/src/: main.cpp
Motion_Tracking/: CMakeLists.txt
Motion_Tracking/include/: Calculation.hpp  PreProcImage.hpp  bodyframe.h  trace.h  trackedobject.hpp
Motion_Tracking/src/: bodyframe.cpp  main.cpp  trace.cpp
Motion_Tracking/src/objectdetection/: trackedobjectmonitor.cpp
Motion_Tracking/src/util/: Paint.cpp
